[tool.poetry]
name = "cw-logging"
version = "0.1.0"
description = ""
authors = ["Tahsin Sayeed <tahsinalsayeed@gmail.com>"]
readme = "README.md"
packages = [{include = "cw_logging"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.94.1"
loguru = "^0.6.0"
requests = "^2.28.2"
pydantic = "^1.10.6"
uvicorn = "^0.21.0"
watchtower = "^3.0.1"
boto3 = "^1.26.91"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
